fixed dualsliding panel position bug on small devices

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -228,7 +228,7 @@
 	.panels__side--inner-left,
 	.panels__side--inner-right,
 	.panels__side--inner {
-		height: 50vh;
+		height: 333px;
 		padding: 2vh 8vw;
 		display: flex;
 		align-items: center;
